--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,8 @@ dist
 
 # vuepress build output
 .vuepress/dist
-
+orbitdb/
+Scripts/orbitdb/
 # vuepress v2.x temp and cache directory
 .temp
 .cache
