--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@libp2p/webrtc-star-signalling-server": "^2.0.1",
+    "@multiformats/multiaddr": "^12.1.2",
     "orbit-db": "^0.29.0"
   },
   "main": "add_to_ipfs_orbitdb.js",
