--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "@libp2p/webrtc-star-signalling-server": "^2.0.1",
     "@multiformats/multiaddr": "^12.1.2",
-    "orbit-db": "^0.29.0"
+    "ipfs": "^0.66.0",
+    "orbit-db": "^0.29.0",
+    "websocket": "^1.0.34"
   },
   "main": "IPFSOrbitDB.js",
   "author": ""
